--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,26 +13,6 @@ a {
     color: yellow;
 }
 
-.side_panel {
-    position: absolute;
-    display: block;
-    top: 0;
-    right: 0;
-}
-
-.side_panel ul {
-    font-size: 150%;
-    padding: 0;
-    margin: 0;
-}
-
-.side_panel li {
-    list-style: none;
-    padding: 50px;
-    background-color: darkblue;
-    margin-bottom: 1px;
-}
-
 .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
     min-height: 100vh; /* These two lines are counted as one :-)       */
@@ -47,6 +27,13 @@ input[type="text"] {
     margin-bottom: 5px;
 }
 
-button[type="submit"] {
-    color: black;
+button {
+    color: orange;
+    border-radius: 5px;
+    background-color: darkslategray;
+    border-width: 1px;
+    border-style: outset;
+    border-color: grey;
+    margin-bottom: 3px;
 }
+
