--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,13 @@
     /**
      * Init & connect websockets
      */
+    //var socket = io.connect('http://sod.spsy.eu:3000');
     var socket = io.connect('http://localhost:3000');
     socket.on('event', function(event) {
-        console.log(event.state + event.media_id);
+        console.log(event);
         switch(event.state) {
             case 'incoming_media':
+                console.log('Incoming_media');
                 mediaQueue.push(event.media_id);
                 break;
         }
@@ -65,12 +67,8 @@
      * The API will call this function when the video player is ready.
      */
     function onPlayerReady(event) {
-        var videoID = getNextVideo();
-        if(videoID !== false) {
-            player.loadVideoById(videoID, 5, "large");
-            player.playVideo();
-        }
-        socket.emit('event', { state: event.data});
+        console.log('PlayerReady');
+        checkNextVideo();
     }
 
     /**
@@ -116,19 +114,38 @@
      */
     function checkNextVideo() {
 
+        console.log('CheckVideo');
+
         if(tmCheckVideo) {
             clearTimeout(tmCheckVideo);
             tmCheckVideo = null;
         }
 
-        var videoID = getNextVideo();
-        console.log('CheckNextVideo: ' + videoID);
-        if (videoID !== false) {
-            player.loadVideoById(videoID, 5, "large");
-        } else {
-            tmCheckVideo = setTimeout(function() {
-                checkNextVideo();
-            }, 3000);
+        switch(player.getPlayerState()) {
+            case YT.PlayerState.PLAYING:
+            case YT.PlayerState.PAUSED:
+            case YT.PlayerState.BUFFERING:
+                console.log('CheckVideo: waiting for video finish ' + player.getPlayerState());
+                tmCheckVideo = setTimeout(function() {
+                    checkNextVideo();
+                }, 3000);
+                break;
+
+            case YT.PlayerState.ENDED:
+            case YT.PlayerState.CUED:
+            case YT.PlayerState.UNSTARTED:
+                console.log('CheckVideo: getNextVideo');
+                var videoID = getNextVideo();
+                console.log('CheckNextVideo: ' + videoID);
+                if (videoID !== false) {
+                    player.loadVideoById(videoID, 5, "large");
+                } else {
+                    tmCheckVideo = setTimeout(function() {
+                        checkNextVideo();
+                    }, 3000);
+                }
+                break;
+
         }
     }
 
